* bug removed for partitionBundle,character-class, and performance improved
* Improved explanation of the installation procedure for Mac in the package vignette
* for context-method: param sAttribute working again to check boundaries of match regions
* sample-method for objects of class kwic and context
* kwic, cpos, and context method will accept queries of length > 1

v0.7.3
* new installed.corpora() convenience function to list all data packages with corpora
* view-method and show-method for cooccurrences-objects now successfully redirect
output to RStudio viewer
* data.table-style indexing of objects inheriting from textstat-class
* for windows compatibility, as.corpusEnc/as.nativeEnc for encoding conversion
* performance gain for size-method by using polmineR.Rcpp
* dissect-method dropped (replaced by size)
* improved documentation of size-method
* labels for cooccurrences-output
* cooccurrencesBundle-class and cooccurrence-method for bundle restored
* as.data.table for cooccurrencesBundle-class
* count-method for whole corpus for pAttribute > 1
* functionality of meta-method merged into sAttributes-method (meta-method dropped)
* speed improvements for generating html output for reading
* previously unexported highlight-method now exported, and more robust than before (using xml2)
* progress bars for multicore operations now generated by pbapply package
* starting to use testthat for unit testing

v0.7.2
* updated documentation of partition-method.
* documentation of hits-method improved
* use-methode: default value for pkg ist NULL (return to default registry), function more robust
* Rework for parsing the registry
* rework of templates, are part of options now (see ?setTemplate, ?getTemplate)
* experimental use of polmineR.Rcpp-package for fast counts for whole corpus
* new convenience function install.corpus to install CWB corpus wrapped into R data package
* adjustments to make package compatible with polmineR.shiny