@@ -11,6 +11,7 @@ v0.7.4
 * for context-method: param sAttribute working again to check boundaries of match regions
 * sample-method for objects of class kwic and context
 * kwic, cpos, and context method will accept queries of length > 1
+* use-function and resetRegistry-function reworked
 
 v0.7.3
 * new installed.corpora() convenience function to list all data packages with corpora
